# 1d-quantum-mechanics

./: .gitignore  README.md  _ham.py  harmonic_osci.ipynb  learn_solution.ipynb  pyproject.toml  random_potential.ipynb  scattering_phases.ipynb  scientific.mplstyle  step.ipynb  woods_saxon.ipynb
