[tool.poetry]
name = "pytorch_train"
version = "0.0.0"
description = "PyTorch excercises"
authors = ["Maximilian Schebek"]

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
torch = "^1.10"
torchvision= "^0.11.2"
matplotlib = "^3.5.1"
numpy = "^1.22.3"

[tool.poetry.dev-dependencies]
black = "^21.10b0"
pylint = "^2.11.1"
pytest = "^6.2.5"
ipython = "^7.29.0"
ipykernel = "^6.5.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

